--- a/index.html
+++ b/index.html
@@ -2,13 +2,42 @@
 <html>
 <head>
     <title>ReBus TV</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>ReBus TV</h1>
-    <p>Welcome to ReBus TV. Premium QLED and OLED TVs.</p>
 
-    <a href="qled.html">QLED TVs</a><br>
-    <a href="oled.html">OLED TVs</a><br>
-    <a href="contact.html">Contact</a>
+<header>
+    <h1>ReBus TV</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="qled.html">QLED TVs</a>
+        <a href="oled.html">OLED TVs</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
+
+<section class="hero">
+    <h2>Premium QLED & OLED Televisions</h2>
+    <p>Sharper, brighter, and more luxurious than ever.</p>
+</section>
+
+<div class="grid">
+    <div class="card">
+        <h3>ReBus QLED X95</h3>
+        <p>Starting at $2,199</p>
+        <a class="btn" href="qled.html">View QLED</a>
+    </div>
+
+    <div class="card">
+        <h3>ReBus OLED Z9</h3>
+        <p>Starting at $2,799</p>
+        <a class="btn" href="oled.html">View OLED</a>
+    </div>
+</div>
+
+<footer>
+    <p>© 2026 ReBus TV</p>
+</footer>
+
 </body>
 </html>
