--- a/qled.html
+++ b/qled.html
@@ -2,13 +2,41 @@
 <html>
 <head>
     <title>ReBus QLED TVs</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>QLED TVs</h1>
 
-    <p>ReBus QLED X95 – $2,199</p>
-    <p>ReBus QLED Ultra QX120 – $2,499</p>
+<header>
+    <h1>ReBus TV</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="qled.html">QLED TVs</a>
+        <a href="oled.html">OLED TVs</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
 
-    <a href="index.html">Back to Home</a>
+<h2>QLED Models</h2>
+
+<div class="grid">
+    <div class="card">
+        <h3>ReBus QLED X95</h3>
+        <p>65" – $2,199</p>
+        <p>75" – $2,799</p>
+        <p>85" – $3,499</p>
+    </div>
+
+    <div class="card">
+        <h3>ReBus QLED Ultra QX120</h3>
+        <p>65" – $2,499</p>
+        <p>75" – $3,099</p>
+        <p>85" – $3,899</p>
+    </div>
+</div>
+
+<footer>
+    <p>© 2026 ReBus TV</p>
+</footer>
+
 </body>
 </html>
