--- a/oled.html
+++ b/oled.html
@@ -2,13 +2,41 @@
 <html>
 <head>
     <title>ReBus OLED TVs</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>OLED TVs</h1>
 
-    <p>ReBus OLED Z9 – $2,799</p>
-    <p>ReBus OLED Infinity ZX200 – $3,499</p>
+<header>
+    <h1>ReBus TV</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="qled.html">QLED TVs</a>
+        <a href="oled.html">OLED TVs</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
 
-    <a href="index.html">Back to Home</a>
+<h2>OLED Models</h2>
+
+<div class="grid">
+    <div class="card">
+        <h3>ReBus OLED Z9</h3>
+        <p>55" – $2,799</p>
+        <p>65" – $3,299</p>
+        <p>77" – $4,199</p>
+    </div>
+
+    <div class="card">
+        <h3>ReBus OLED Infinity ZX200</h3>
+        <p>65" – $3,499</p>
+        <p>77" – $4,499</p>
+        <p>83" – $5,299</p>
+    </div>
+</div>
+
+<footer>
+    <p>© 2026 ReBus TV</p>
+</footer>
+
 </body>
 </html>
