--- a/contact.html
+++ b/contact.html
@@ -2,13 +2,30 @@
 <html>
 <head>
     <title>Contact ReBus TV</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Contact Us</h1>
 
+<header>
+    <h1>ReBus TV</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="qled.html">QLED TVs</a>
+        <a href="oled.html">OLED TVs</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+</header>
+
+<h2>Contact Us</h2>
+
+<div class="contact-box">
     <p>Email: support@rebustv.com</p>
     <p>Phone: 800-555-REBUS</p>
+</div>
 
-    <a href="index.html">Back to Home</a>
+<footer>
+    <p>© 2026 ReBus TV</p>
+</footer>
+
 </body>
 </html>
